# metro-sample-bazel

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bak  kotlin_abi_override.bzl  kotlin_compiler_patch.bzl
app/: BUILD.bazel
app/src/main/kotlin/com/uber/metro/sample/: AppGraph.kt  DataModule.kt  LoggingModule.kt  Services.kt
app/src/test/kotlin/com/uber/metro/sample/: AppGraphTest.kt  ReplacementNetworkModule.kt
libs/jvm-abi-gen/: BUILD.bazel
network/: BUILD.bazel
network/src/main/kotlin/com/uber/metro/sample/: NetworkModule.kt  ReplacableNetworkModule.kt
scope/: BUILD.bazel
scope/src/main/kotlin/com/uber/metro/sample/: AppScope.kt
scripts/: analyze-abi-jars.sh  build-kotlin-dev-compiler.sh  setup-custom-jvm-abi-gen.sh  setup-kotlin-compiler.sh
