load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    experimental_use_abi_jars = True,
    jvm_target = "11",
)

kt_compiler_plugin(
    name = "metro",
    id = "dev.zacsweers.metro",
    target_embedded_compiler = True,
    options = {
        "enabled":"true",
        "debug":"true",
        "reports_destination":"/tmp/metro-sample-bazel",
    },
    deps = [
        "@maven//:dev_zacsweers_metro_compiler",
        "@maven//:dev_zacsweers_metro_runtime_jvm",
    ],
    visibility = ["//visibility:public"],
)
