###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "metro-sample-bazel")

bazel_dep(name = "rules_kotlin", version = "2.3.10")
bazel_dep(name = "rules_jvm_external", version = "6.10")

# Override rules_android to use a version compatible with Bazel 9+
single_version_override(
    module_name = "rules_android",
    version = "0.7.0",
)

kt = use_extension("@rules_kotlin//kotlin:extensions.bzl", "kt")
kt.toolchain(
    experimental_use_abi_jars = True,
    jvm_target = "11",
)
# Using custom Kotlin 2.2.22-UBER compiler via repository override in .bazelrc
# kt.compiler() not needed as we override the entire compiler repository
use_repo(kt, "kotlin_toolchains")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "dev.zacsweers.metro:runtime-jvm:0.11.2",
        "dev.zacsweers.metro:compiler:0.11.2",
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.1.3",
    ],
)
use_repo(maven, "maven")
