module(name = "metro-sample-bazel")

bazel_dep(name = "rules_kotlin", version = "2.3.10")
bazel_dep(name = "rules_jvm_external", version = "6.10")

# comment out line 7-12 to test with default compiler and show the error
rules_kotlin_extensions = use_extension("@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl", "rules_kotlin_extensions")
rules_kotlin_extensions.kotlinc_version(
    version = "2.3.21-RC",
    sha256 = "25f4ef443116db18b5b850083e3430c825d14b94406e5911cc305d1e797c6e98"
)
use_repo(rules_kotlin_extensions, "com_github_google_ksp", "com_github_jetbrains_kotlin", "com_github_jetbrains_kotlin_git", "com_github_pinterest_ktlint", "kotlinx_serialization_core_jvm", "kotlinx_serialization_json", "kotlinx_serialization_json_jvm")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "dev.zacsweers.metro:runtime-jvm:0.11.2",
        "dev.zacsweers.metro:compiler:0.11.2",
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.1.3",
    ],
)
use_repo(maven, "maven")
